@@ -1,3 +1,6 @@
+2011-09-21 gabriel.oliveira
+* Make "Refresh" button correctly reset UNG listbox checked items, asynchronously
+
 2011-07-01 gabriel.oliveira
 * Refactor to only load UNG document list when necessary
 
